github upload commit

--- a/templates/books/index.html
+++ b/templates/books/index.html
@@ -5,9 +5,9 @@
 <div class="book-info">
     <div>
         <p>{{book.title}}</p>
-        <p>{{book.genre}}</p>
+        <!-- <p>{{book.genre}}</p>
         <p>{{book.publisher}}</p>
-        <p>{{book.author.first_name}} {{book.author.last_name}}</p>
+        <p>{{book.author.first_name}} {{book.author.last_name}}</p> -->
     </div>
     <div>
         <form action="/books/{{book.id}}/delete" method="post">
